--- a/style.css
+++ b/style.css
@@ -1,6 +1,36 @@
 /*
- * Globals
- */
+* Globals
+*/
+
+@font-face {
+  font-family: "Oswald";
+  src: local("Oswald"),
+    url(../../assets/fonts/Oswald-Regular.woff) format("woff");
+}
+
+@font-face {
+  font-family: "Oswald Bold";
+  src: local("Oswald Bold"),
+    url(../../assets/fonts/Oswald-Bold.woff) format("woff");
+}
+
+@font-face {
+  font-family: "Oswald Medium";
+  src: local("Oswald Medium"),
+    url(../../assets/fonts/Oswald-Medium.woff) format("woff");
+}
+
+@font-face {
+  font-family: "Open Sans";
+  src: local("Open Sans"),
+    url(../../assets/fonts/OpenSans-Regular.woff) format("woff");
+}
+
+@font-face {
+  font-family: "Open Sans Bold";
+  src: local("Open Sans Bold"),
+    url(../../assets/fonts/OpenSans-Bold.woff) format("woff");
+}
 
 *,
 html {
@@ -9,9 +39,9 @@ html {
 }
 
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 18px;
-  color: #2d3142;
+  color: #292f36;
 }
 
 h1,
@@ -21,9 +51,7 @@ h4,
 h5,
 h6 {
   margin-top: 0;
-  margin-bottom: 60px;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: bold;
+  font-family: "Oswald Bold", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 h1 {
@@ -44,23 +72,13 @@ a {
   padding: 0 1em;
 }
 
-/* Header */
+/*
+ * Header
+ */
 
 header {
-  background: #4f5d75;
-}
-
-.logo {
-  color: #ffffff;
-  height: 40px;
-  margin-right: 10px;
-  margin-bottom: -5px;
-}
-
-.brand-name {
-  font-family: Futura, "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 36px;
-  text-decoration: none;
+  background: #4ecdc4;
+  height: 90px;
 }
 
 .header-container {
@@ -72,15 +90,34 @@ header {
   justify-content: space-between;
 }
 
+.logo {
+  color: #ffffff;
+  height: 40px;
+  margin-right: 10px;
+  margin-bottom: -5px;
+}
+
+.brand-name {
+  font-family: "Oswald", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 36px;
+  text-decoration: none;
+}
+
 /* Nav links */
 
+.nav-links {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+}
+
 .nav-link {
-  font-family: Futura, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Oswald Medium", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 18px;
   text-decoration: none;
 }
 .nav-link:not(:first-child) {
-  margin-left: 100px;
-  padding: 14px 0;
+  margin-left: 65px;
 }
 
 .nav-link:hover,
@@ -107,35 +144,38 @@ header {
   border-left: 5px solid transparent;
 }
 
-/* Hero */
+/* 
+**  Hero
+*/
 
 .hero-container {
   background-color: #ffffff;
   background-image: url("data:image/svg+xml,%3Csvg width='52' height='26' viewBox='0 0 52 26' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%232d3142' fill-opacity='0.08'%3E%3Cpath d='M10 10c0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6h2c0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4v2c-3.314 0-6-2.686-6-6 0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6zm25.464-1.95l8.486 8.486-1.414 1.414-8.486-8.486 1.414-1.414z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+  /* background: yellow; */
+  height: 70vh;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
-  height: 70vh;
+  justify-content: center;
 }
 
 .hero-tagline {
-  font-family: Futura, "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 64px;
   font-weight: bold;
   line-height: 1.25;
   margin-bottom: 40px;
-  max-width: 710px;
+  max-width: 720px;
 }
 
 .hero-button {
-  background: #9a350e;
-  font-weight: bold;
+  background: #ff6b6b;
+  display: inline-block;
+  font-family: "Open Sans Bold";
   padding: 1em 2em;
   text-decoration: none;
 }
 
 .hero-button:hover {
-  background: #ef8354;
+  cursor: pointer;
 }
 
 /* About Page  */
@@ -143,10 +183,12 @@ header {
   margin: 60px 0;
 }
 
-/* Footer */
+/*
+ * Footer
+ */
+
 footer {
-  background: #4f5d75;
-  font-family: Futura, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  background: #4ecdc4;
   height: 400px;
 }
 
@@ -155,11 +197,12 @@ footer {
   justify-content: space-between;
 }
 
-.column-header {
+.footer-header {
   color: #ffffff;
   font-size: 36px;
-  margin-top: 60px;
-  margin-bottom: 25px;
+  font-family: "Oswald Bold", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin-top: 100px;
+  margin-bottom: 20px;
 }
 
 .column-text {
@@ -189,6 +232,7 @@ footer {
   border: none;
   color: #2d3042;
   height: 40px;
+  font-family: "Oswald Bold", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 18px;
   margin-top: 50px;
   padding-left: 1em;
@@ -196,11 +240,13 @@ footer {
 }
 
 #subscribe-button {
-  background: #ef8354;
-  color: #2d3042;
+  background: #ff6b6b;
+  color: #ffffff;
   border: none;
+  font-family: "Oswald Bold", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 18px;
-  padding: 10px 30px;
+  margin-left: -5px;
+  padding: 7px 30px;
   text-transform: uppercase;
 }
 
@@ -208,11 +254,25 @@ footer {
   cursor: pointer;
 }
 
-/* Main column and sidebar layout */
+/*
+ * Copyright
+*/
 
-.blog-main {
-  font-size: 18px;
-  line-height: 1.5;
+.copyright {
+  background: #292f36;
+  color: #ffffff;
+  font-family: "Oswald Medium", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  height: 45px;
+  /* display: flex;
+  align-items: center; */
+  display: flex;
+  align-items: center;
+}
+
+.copyright-container {
+  display: flex;
+  justify-content: flex-start;
+  width: 1200px;
 }
 
 /* Sidebar modules for boxing content */
@@ -241,35 +301,4 @@ footer {
   padding: 10px 20px;
   text-align: center;
   border-radius: 30px;
-}
-
-/*
-   * Blog posts
-   */
-
-.blog-post {
-  margin-bottom: 60px;
-}
-.blog-post-title {
-  margin-bottom: 5px;
-  font-size: 40px;
-}
-.blog-post-meta {
-  margin-bottom: 20px;
-  color: #999;
-}
-
-/*
-   * Footer
-   */
-
-.blog-footer {
-  padding: 40px 0;
-  color: #999;
-  text-align: center;
-  background-color: #f9f9f9;
-  border-top: 1px solid #e5e5e5;
-}
-.blog-footer p:last-child {
-  margin-bottom: 0;
 }
