--- a/style.css
+++ b/style.css
@@ -66,6 +66,10 @@ a {
   color: #ffffff;
 }
 
+*::selection {
+  background: #ffff2d !important; /* WebKit/Blink Browsers */
+}
+
 .container {
   margin: 0 auto;
   max-width: 1100px;
