--- a/style.css
+++ b/style.css
@@ -62,6 +62,10 @@ h2 {
   font-size: 28px;
 }
 
+p {
+  line-height: 2;
+}
+
 a {
   color: #ffffff;
 }
@@ -190,18 +194,24 @@ header {
   margin: 60px 0;
 }
 
+.about-header {
+  font-size: 36px;
+  margin-bottom: 60px;
+}
+
 /*
  * Footer
  */
 
 footer {
   background: #4ecdc4;
-  height: 400px;
+  height: 350px;
 }
 
 .columns {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .footer-header {
@@ -218,9 +228,15 @@ footer {
 }
 
 .social-media-links {
-  display: block;
+  /* display: block; */
   text-align: right;
   text-decoration: none;
+}
+
+.social-media-after::after {
+  content: " | ";
+  color: #fff;
+  font-size: 26px;
 }
 
 .social-media-links:not(:last-child) {
@@ -308,4 +324,43 @@ footer {
   padding: 10px 20px;
   text-align: center;
   border-radius: 30px;
+}
+
+@media screen and (max-width: 600px) {
+  .logo {
+    display: none;
+  }
+
+  .brand-name {
+    font-size: 30px;
+  }
+
+  .hero-container {
+    padding: 100px 0;
+  }
+
+  .hero-container {
+    height: auto;
+  }
+
+  .hero-tagline {
+    font-size: 36px;
+  }
+
+  .tagline {
+    display: block;
+  }
+
+  .hero-button {
+    display: none;
+  }
+
+  footer {
+    height: auto;
+    padding-bottom: 100px;
+  }
+
+  .column-text {
+    font-size: 18px;
+  }
 }
