--- a/style.css
+++ b/style.css
@@ -298,57 +298,47 @@ footer {
   width: 1200px;
 }
 
-/* Sidebar modules for boxing content */
-.sidebar-module {
-  padding: 15px;
-  margin: 0 -15px 15px;
-}
-.sidebar-module-inset {
-  padding: 15px;
-  background-color: #f5f5f5;
-  border-radius: 4px;
-}
-.sidebar-module-inset p:last-child,
-.sidebar-module-inset ul:last-child,
-.sidebar-module-inset ol:last-child {
-  margin-bottom: 0;
+#menu-button {
+  background: #4ecdc4;
+  color: white;
+  border: none;
+  height: 90px;
+  font-size: 18px;
+  font-family: "Oswald Medium", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100px;
 }
 
-/* Pagination */
-.pager {
-  margin-bottom: 60px;
-  text-align: left;
-}
-.pager > li > a {
-  width: 140px;
-  padding: 10px 20px;
-  text-align: center;
-  border-radius: 30px;
+.hidden {
+  display: none;
 }
 
-.mobile-menu {
-  background: #4eccc4;
-  height: calc(100vh - 45px);
+#mobile-menu {
+  background: pink;
+  height: 500px;
+}
+
+#mobile-links {
+  align-items: center;
+  background: #292f36;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  margin-top: 0;
-  font-family: "Oswald Bold", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 36px;
-  font-weight: bold;
+  height: 500px;
 }
 
-.mobile-menu a {
+.mobile-link {
+  font-family: "Oswald Medium", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 22px;
+  margin: 0.5em;
+  padding: 1em 2em;
   text-decoration: none;
 }
 
-.mobile-menu a:hover {
-  text-decoration: underline;
-}
-
 @media screen and (min-width: 600px) {
-  .mobile-menu-link {
+  #menu-button {
     display: none;
   }
 }
