--- a/style.css
+++ b/style.css
@@ -88,6 +88,8 @@ a {
 header {
   background: #4ecdc4;
   height: 90px;
+  width: 100%;
+  z-index: 100;
 }
 
 .header-container {
@@ -113,7 +115,81 @@ header {
   text-decoration: none;
 }
 
-/* Nav links */
+/*
+**  Hamburger Button 
+*/
+
+#menu-button {
+  background: #4ecdc4;
+  border: none;
+  height: 90px;
+  font-size: 18px;
+  font-family: "Oswald Medium", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100px;
+}
+
+.hidden {
+  display: none;
+}
+
+#mobile-menu {
+  background: #4eccc4;
+  swidth: 100vw;
+  z-index: -10;
+}
+
+/* 100 vh mobile menu */
+
+/* #mobile-links {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.mobile-link {
+  color: #ffffff;
+  font-family: "Oswald Medium", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 36px;
+  text-decoration: none;
+}
+
+.mobile-link:hover {
+  cursor: pointer;
+} */
+
+#mobile-links {
+  align-items: center;
+  background: #292f36;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.mobile-link {
+  background: #ffffff;
+  color: #292f36;
+  font-family: "Oswald Medium", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 22px;
+  height: 65px;
+  margin-bottom: 3px;
+  padding-top: 30px;
+  padding-left: 1em;
+  text-decoration: none;
+  width: 100%;
+}
+
+.mobile-link:hover {
+  cursor: pointer;
+}
+
+/*
+**  Nav links
+*/
 
 .nav-links {
   align-items: center;
@@ -136,26 +212,8 @@ header {
   text-decoration: underline;
 }
 
-/* Active state gets a caret at the bottom */
-.blog-nav .active {
-  color: #fff;
-}
-.blog-nav .active:after {
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  width: 0;
-  height: 0;
-  margin-left: -5px;
-  vertical-align: middle;
-  content: " ";
-  border-right: 5px solid transparent;
-  border-bottom: 5px solid;
-  border-left: 5px solid transparent;
-}
-
 /* 
-**  Hero
+**  Hero Section
 */
 
 .hero-container {
@@ -189,7 +247,10 @@ header {
   cursor: pointer;
 }
 
-/* About Page  */
+/*
+**  About Page 
+*/
+
 .about-container {
   margin: 60px 0;
 }
@@ -293,52 +354,6 @@ footer {
   display: flex;
   justify-content: flex-start;
   width: 1200px;
-}
-
-#menu-button {
-  background: #4ecdc4;
-  border: none;
-  height: 90px;
-  font-size: 18px;
-  font-family: "Oswald Medium", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 100px;
-}
-
-.hidden {
-  display: none;
-}
-
-#mobile-menu {
-  height: 106px;
-}
-
-#mobile-links {
-  align-items: center;
-  background: #292f36;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  height: 100px;
-}
-
-.mobile-link {
-  background: #ffffff;
-  color: #292f36;
-  font-family: "Oswald Medium", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 22px;
-  height: 50px;
-  margin-bottom: 3px;
-  padding-top: 5px;
-  padding-left: 1em;
-  text-decoration: none;
-  width: 100%;
-}
-
-.mobile-link:hover {
-  cursor: pointer;
 }
 
 @media screen and (min-width: 800px) {
