--- a/style.css
+++ b/style.css
@@ -32,6 +32,18 @@
     url(../../assets/fonts/OpenSans-Bold.woff) format("woff");
 }
 
+@font-face {
+  font-family: "IBM Plex Sans";
+  src: local("IBM Plex Sans"),
+    url(../../assets/fonts/IBMPlexSans-Regular.woff) format("woff");
+}
+
+@font-face {
+  font-family: "IBM Plex Sans Bold";
+  src: local("IBM Plex Sans Bold"),
+    url(../../assets/fonts/IBMPlexSans-Bold.woff) format("woff");
+}
+
 *,
 html {
   margin: 0;
@@ -39,7 +51,7 @@ html {
 }
 
 body {
-  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "IBM Plex Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 18px;
   color: #292f36;
 }
@@ -51,7 +63,8 @@ h4,
 h5,
 h6 {
   margin-top: 0;
-  font-family: "Oswald Bold", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "IBM Plex Sans Bold", "Helvetica Neue", Helvetica, Arial,
+    sans-serif;
 }
 
 h1 {
@@ -76,8 +89,7 @@ a {
 }
 
 .container {
-  margin: 0 auto;
-  max-width: 1100px;
+  max-width: 1200px;
   padding: 0 1em;
 }
 
@@ -86,8 +98,8 @@ a {
  */
 
 header {
-  background: #4ecdc4;
-  height: 90px;
+  background: #fafafa;
+  /* height: 100px; */
   width: 100%;
   z-index: 100;
 }
@@ -95,23 +107,24 @@ header {
 .header-container {
   margin: 0 auto;
   align-items: center;
-  height: 90px;
-  color: #ffffff;
+  /* height: 90px; */
+  padding-top: 25px;
+  color: #22a4ff;
   display: flex;
   justify-content: space-between;
 }
 
 .logo {
-  color: #ffffff;
-  height: 40px;
   margin-right: 10px;
   margin-bottom: -5px;
 }
 
-.brand-name {
-  font-family: "Oswald", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 36px;
-  margin-top: -5px;
+.header-tagline {
+  color: #292f36;
+  display: block;
+  font-family: "IBM Plex Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 18px;
+  margin-left: 10px;
   text-decoration: none;
 }
 
@@ -120,15 +133,29 @@ header {
 */
 
 #menu-button {
-  background: #4ecdc4;
   border: none;
-  height: 90px;
   font-size: 18px;
-  font-family: "Oswald Medium", "Helvetica Neue", Helvetica, Arial, sans-serif;
   position: absolute;
-  top: 0;
-  right: 0;
-  width: 100px;
+  top: 55px;
+  right: 20px;
+  height: 45px;
+}
+
+button {
+  border-radius: 5px;
+}
+
+button:focus,
+button:active,
+button:visited {
+  /* height: 45px; */
+  outline: 0;
+  border-radius: 5px;
+}
+
+button:active {
+  outline: none;
+  border: none;
 }
 
 input[type="submit"] {
@@ -140,7 +167,9 @@ input[type="submit"] {
 }
 
 #mobile-menu {
-  background: #4eccc4;
+  padding-top: 50px;
+  /* background: #4eccc4; */
+  background: #fafafa;
   z-index: -10;
 }
 
@@ -171,18 +200,21 @@ input[type="submit"] {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  /* padding-top: 50px; */
 }
 
 .mobile-link {
-  background: #ffffff;
+  background: #fafafa;
   color: #292f36;
-  font-family: "Oswald Medium", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "IBM Plex Sans Bold", "Helvetica Neue", Helvetica, Arial,
+    sans-serif;
   font-size: 22px;
   height: 65px;
   margin-bottom: 3px;
   padding-top: 30px;
   padding-left: 1em;
   text-decoration: none;
+  text-transform: uppercase;
   width: 100%;
 }
 
@@ -201,18 +233,18 @@ input[type="submit"] {
 }
 
 .nav-link {
-  font-family: "Oswald Medium", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #22a4ff;
+  font-family: "IBM Plex Sans Bold", "Helvetica Neue", Helvetica, Arial,
+    sans-serif;
   font-size: 18px;
+  padding: 12px 20px;
   text-decoration: none;
-}
-.nav-link:not(:first-child) {
-  margin-left: 65px;
 }
 
 .nav-link:hover,
 .nav-link:focus {
-  color: #fff;
-  text-decoration: underline;
+  background: #292f36;
+  color: #ffffff;
 }
 
 /* 
@@ -222,22 +254,33 @@ input[type="submit"] {
 .hero-container {
   background-color: #ffffff;
   background-image: url("data:image/svg+xml,%3Csvg width='52' height='26' viewBox='0 0 52 26' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%232d3142' fill-opacity='0.08'%3E%3Cpath d='M10 10c0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6h2c0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4v2c-3.314 0-6-2.686-6-6 0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6zm25.464-1.95l8.486 8.486-1.414 1.414-8.486-8.486 1.414-1.414z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-  height: 70vh;
+  background: #fafafa;
   display: flex;
   align-items: center;
+  flex-direction: column;
   justify-content: center;
+}
+
+.container-content {
+  padding: 100px 1em;
 }
 
 .hero-tagline {
   font-size: 64px;
-  font-weight: bold;
   line-height: 1.25;
-  margin-bottom: 40px;
-  max-width: 720px;
+  margin-bottom: 100px;
+  max-width: 1166px;
+}
+
+.coming-soon {
+  font-style: italic;
+  background: linear-gradient(#19d398, #19d398) no-repeat;
+  background-position: bottom;
+  background-size: 100% 75%;
 }
 
 .hero-button {
-  background: #ff6b6b;
+  background: #19d398;
   display: inline-block;
   font-family: "Open Sans Bold";
   padding: 1em 2em;
@@ -246,8 +289,9 @@ input[type="submit"] {
 }
 
 .hero-button:hover {
-  box-shadow: 10px 10px 0 #4eccc4;
+  /* box-shadow: 5px 5px 15px 0 #555555; */
   cursor: pointer;
+  text-decoration: underline;
 }
 
 /*
@@ -268,12 +312,24 @@ input[type="submit"] {
  */
 
 footer {
-  background: #4ecdc4;
-  height: 350px;
+  background: #02150f;
+  /* display: flex;
+  align-items: center;
+  justify-content: space-between; */
+}
+
+.footer-container,
+.copyright-container {
+  margin: 0 auto;
+}
+
+.footer-content {
+  padding: 100px 0;
 }
 
 .columns {
   display: flex;
+  align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
 }
@@ -282,7 +338,6 @@ footer {
   color: #ffffff;
   font-size: 36px;
   font-family: "Oswald Bold", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin-top: 100px;
   margin-bottom: 20px;
 }
 
@@ -291,22 +346,27 @@ footer {
   font-size: 24px;
 }
 
-.social-media-links {
+#social-media-links {
   text-align: right;
+}
+
+.social-media-link {
+  /* margin: 0 15px; */
   text-decoration: none;
 }
 
 .social-media-after::after {
   content: " | ";
   color: #fff;
-  font-size: 26px;
+  font-size: 24px;
 }
 
-.social-media-links:not(:last-child) {
+.social-media-link:not(:last-child) {
   margin-bottom: 10px;
+  /* margin-right: 15px; */
 }
 
-.social-media-links:hover {
+.social-media-link:hover {
   text-decoration: underline;
 }
 
@@ -326,7 +386,7 @@ footer {
 }
 
 #subscribe-button {
-  background: #ff6b6b;
+  background: #19d398;
   color: #ffffff;
   border: none;
   font-family: "Oswald Bold", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -345,49 +405,62 @@ footer {
 */
 
 .copyright {
-  background: #292f36;
+  background: #02150f;
   color: #ffffff;
-  font-family: "Oswald Medium", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  height: 45px;
   display: flex;
   align-items: center;
 }
 
 .copyright-container {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
   width: 1200px;
+}
+
+.copyright-brand {
+  font-family: "Oswald Medium", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+#pride-flag {
+  margin-left: 10px;
+  margin-bottom: -2px;
 }
 
 @media screen and (min-width: 800px) {
   #menu-button {
     display: none;
   }
+
+  .mobile-logo {
+    display: none;
+  }
 }
 
 @media screen and (max-width: 800px) {
-  .logo {
+  .desktop-logo {
     display: none;
   }
 
-  .brand-name {
-    font-size: 30px;
+  .mobile-logo {
+    padding: 25px 0;
+  }
+
+  .header-tagline {
+    display: block;
+    font-size: 16px;
+    margin-top: -75px;
+    margin-left: 115px;
+    width: 153px;
   }
 
   .about-link {
     display: none;
   }
 
-  .hero-container {
-    padding: 100px 0;
-  }
-
-  .hero-container {
-    height: auto;
-  }
-
   .hero-tagline {
-    font-size: 36px;
+    font-size: 30px;
   }
 
   .tagline {
@@ -410,5 +483,30 @@ footer {
 
   .column-text {
     font-size: 18px;
+  }
+
+  .footer-content {
+    padding: 50px 0;
+  }
+
+  .social-media-header {
+    margin-top: 50px;
+  }
+
+  #social-media-links {
+    text-align: left;
+  }
+
+  .footer-content {
+    padding-bottom: 0;
+  }
+
+  .copyright-left {
+    line-height: 1.5;
+  }
+
+  .company-note {
+    font-size: 16px;
+    padding: 25px 0 50px 0;
   }
 }
