--- a/style.css
+++ b/style.css
@@ -337,7 +337,8 @@ footer {
 .footer-header {
   color: #ffffff;
   font-size: 36px;
-  font-family: "Oswald Bold", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "IBM Plex Sans Bold", "Helvetica Neue", Helvetica, Arial,
+    sans-serif;
   margin-bottom: 20px;
 }
 
@@ -351,6 +352,8 @@ footer {
 }
 
 #mce-success-response {
+  font-family: "IBM Plex Sans Bold", "Helvetica Neue", Helvetica, Arial,
+    sans-serif;
   position: absolute;
   margin-top: 10px;
 }
@@ -387,7 +390,8 @@ footer {
   border: none;
   color: #2d3042;
   height: 40px;
-  font-family: "Oswald Bold", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "IBM Plex Sans Bold", "Helvetica Neue", Helvetica, Arial,
+    sans-serif;
   font-size: 18px;
   margin-top: 10px;
   padding-left: 1em;
@@ -398,10 +402,13 @@ footer {
   background: #19d398;
   color: #ffffff;
   border: none;
-  font-family: "Oswald Bold", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "IBM Plex Sans Bold", "Helvetica Neue", Helvetica, Arial,
+    sans-serif;
   font-size: 18px;
+  margin-top: -2px;
   margin-left: -5px;
-  padding: 7px 30px;
+  padding: 8.5px;
+  width: 135px;
   text-transform: uppercase;
 }
 
@@ -429,7 +436,8 @@ footer {
 }
 
 .copyright-brand {
-  font-family: "Oswald Medium", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "IBM Plex Sans Bold", "Helvetica Neue", Helvetica, Arial,
+    sans-serif;
 }
 
 #pride-flag {
@@ -496,6 +504,10 @@ footer {
 
   .footer-content {
     padding: 50px 0;
+  }
+
+  .footer-header {
+    font-size: 30px;
   }
 
   .social-media-header {
