--- a/style.css
+++ b/style.css
@@ -33,15 +33,21 @@
 }
 
 @font-face {
-  font-family: "IBM Plex Sans";
-  src: local("IBM Plex Sans"),
-    url(../../assets/fonts/IBMPlexSans-Regular.woff) format("woff");
-}
-
-@font-face {
   font-family: "IBM Plex Sans Bold";
   src: local("IBM Plex Sans Bold"),
     url(../../assets/fonts/IBMPlexSans-Bold.woff) format("woff");
+}
+
+@font-face {
+  font-family: "IBM Plex Sans Medium";
+  src: local("IBM Plex Sans Medium"),
+    url(../../assets/fonts/IBMPlexSans-Medium.woff) format("woff");
+}
+
+@font-face {
+  font-family: "IBM Plex Sans";
+  src: local("IBM Plex Sans"),
+    url(../../assets/fonts/IBMPlexSans-Regular.woff) format("woff");
 }
 
 *,
@@ -266,6 +272,8 @@ input[type="submit"] {
 }
 
 .hero-tagline {
+  font-family: "IBM Plex Sans Medium", "Helvetica Neue", Helvetica, Arial,
+    sans-serif;
   font-size: 64px;
   line-height: 1.25;
   margin-bottom: 100px;
@@ -274,9 +282,21 @@ input[type="submit"] {
 
 .coming-soon {
   font-style: italic;
-  background: linear-gradient(#19d398, #19d398) no-repeat;
+  /* background: linear-gradient(#19d398, #19d398) no-repeat;
   background-position: bottom;
-  background-size: 100% 75%;
+  background-size: 100% 75%; */
+  color: #292f36;
+  background: linear-gradient(#19d398, #19d398) no-repeat;
+  background: linear-gradient(to right, #19d398, #19d398 50%, #19d398 50%)
+    no-repeat;
+  background: linear-gradient(to right, #19d398 99%, #fafafa 99%) no-repeat;
+  background-position: 100% 50%;
+  /* 	Change the second value to adjust the height */
+  background-size: 100% 50%;
+  font-size: 18px;
+  margin-left: -10px;
+  padding-left: 10px;
+  padding-bottom: 10px;
 }
 
 .hero-button {
@@ -478,6 +498,7 @@ footer {
 
   .hero-tagline {
     font-size: 40px;
+    line-height: 46px;
   }
 
   .tagline {
